// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeaturesList /> renders 1`] = `
<div
  className="centered-content "
>
  Something
</div>
`;

exports[`<FeaturesList /> renders reversed 1`] = `
<div
  className="centered-content reverse"
>
  Something
</div>
`;
